[gd_scene load_steps=3 format=3 uid="uid://d3k4l5m6n7o8"]

[ext_resource type="Script" path="res://scripts/ui/SiteUI.gd" id="1_site_ui"]
[ext_resource type="StyleBox" uid="uid://daxb1c2d3e4f" path="res://assets/theme/site_panel_style.tres" id="2_style"]

[node name="Site" type="Button"]
custom_minimum_size = Vector2(200, 80)
focus_mode = 0
mouse_filter = 1
theme_override_styles/normal = ExtResource("2_style")
theme_override_styles/hover = ExtResource("2_style")
theme_override_styles/pressed = ExtResource("2_style")
theme_override_styles/disabled = ExtResource("2_style")
theme_override_styles/focus = ExtResource("2_style")
script = ExtResource("1_site_ui")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Site Name"
horizontal_alignment = 1

[node name="TroopsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Troops: None"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ControlLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Contested"
horizontal_alignment = 1
